users/keycloak/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak
  namespace: users
  annotations:
    secret.reloader.stakater.com/reload: "keycloak-env"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      priorityClassName: system-cluster-critical
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.4.7
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
            - name: internal
              containerPort: 9000
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            periodSeconds: 1
            failureThreshold: 600
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              memory: 2Gi
